fixed Our Mission box alignment - FINAL PUSH(i think)

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -61,7 +61,7 @@ body {
   margin-top: 0px;
   margin-bottom: 0px;
   width: 1200px;
-  height: 50px;
+  height: 130px;
 }
 
 /*Main Content*/
